--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 				src='https://www.google.com/recaptcha/api.js?render=6LcO0ocUAAAAABj11_siC5P2rZSsxviho9yi0XMh'></script>
 </head>
 <body>
-<header class="header">
+<header id="mainHeader" class="header">
 	<div class="container">
 		<div class="inner-wrap">
 			<a href="#" class="logo"><img src="images/logo.png" alt="Logo"></a>
