--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,6 @@
 	<link href="css/main.css" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css"
 				rel="stylesheet"/>
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-				integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-				crossorigin="anonymous">
 	<script
 				src='https://www.google.com/recaptcha/api.js?render=6LcO0ocUAAAAABj11_siC5P2rZSsxviho9yi0XMh'></script>
 </head>
@@ -35,14 +32,14 @@
 					whitelisted</a>
 			</div>
 			<a href="#" class="menu-toggle">
-				<i class="fas fa-bars"></i>
-				<i class="fa fa-times"></i>
+				<i class="fa fa-bars" aria-hidden="true"></i>
+				<i class="fa fa-times" aria-hidden="true"></i>
 			</a>
 		</div>
 	</div>
 </header>
 <div class="main-content">
-	<section class="section-home">
+	<section class="section section-home">
 		<div class="container">
 			<h1 class="main-title">The only account</h1>
 			<h2 class="main-sub-title">Merging banking, crypto & tokenized assets</h2>
@@ -58,7 +55,7 @@
 		</div>
 	</section>
 	<div class="common-bg">
-		<section id="discoverSection" class="discover-section">
+		<section id="discoverSection" class="section discover-section">
 			<div class="container">
 				<h2 class="section-title">
 					<span class="top-text">Discover Bitwala</span>
@@ -80,7 +77,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="introducing-section">
+		<section class="section introducing-section">
 			<div class="container">
 				<h2 class="section-title">
 					<span class="top-text">Introducing</span>
@@ -99,7 +96,7 @@
 			</div>
 		</section>
 	</div>
-	<section id="stoSection" class="token-sale-section">
+	<section id="stoSection" class="section token-sale-section">
 		<div class="container-fluid">
 			<div class="main-block">
 				<h2 class="main-block-title">Participate in our STO now</h2>
@@ -124,7 +121,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="roadmapSection" class="roadmap-section">
+	<section id="roadmapSection" class="section roadmap-section">
 		<div class="container">
 			<h2 class="section-title">
 				<span class="top-text">The future</span>
@@ -175,7 +172,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="offering-section">
+	<section class="section offering-section">
 		<section class="sub-section graphic-section">
 			<div class="container">
 				<h2 class="section-title">
@@ -374,7 +371,7 @@
 			</div>
 		</section>
 	</section>
-	<section class="reviews-section">
+	<section class="section reviews-section">
 		<div class="container">
 			<h2 class="section-title">
 				<span class="top-text"> It’s not just us</span>
@@ -539,7 +536,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="teamSection" class="team-section">
+	<section id="teamSection" class="section team-section">
 		<div class="container">
 			<h2 class="section-title">
 				<span class="top-text">Disruptive team</span>
@@ -547,7 +544,7 @@
 			</h2>
 			<div class="team-members">
 				<div class="row justify-content-md-center">
-					<div class="col-12 col-md-4">
+					<div class="col-12 col-md-6 col-lg-4">
 						<div class="team-member">
 							<img src="images/rawpixel.png" alt="photo">
 							<div class="overlay">
@@ -563,7 +560,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-md-4">
+					<div class="col-12 col-md-6 col-lg-4">
 						<div class="team-member">
 							<img src="images/bryan-angelo.png" alt="photo">
 							<div class="overlay">
@@ -579,7 +576,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-md-4">
+					<div class="col-12 col-md-6 col-lg-4">
 						<div class="team-member">
 							<img src="images/ron-jake.png" alt="photo">
 							<div class="overlay">
@@ -595,7 +592,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-md-4">
+					<div class="col-12 col-md-6 col-lg-4">
 						<div class="team-member">
 							<img src="images/tamarcus-brown.png" alt="photo">
 							<div class="overlay">
@@ -611,7 +608,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-md-4">
+					<div class="col-12 col-md-6 col-lg-4">
 						<div class="team-member">
 							<img src="images/bryan-angelo.png" alt="photo">
 							<div class="overlay">
@@ -634,7 +631,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="partners-section">
+	<section class="section partners-section">
 		<div class="container">
 			<h2 class="section-title">
 				<span class="top-text">Notable</span>
@@ -671,68 +668,50 @@
 			</div>
 		</div>
 	</section>
-	<section class="media-section">
+	<section class="section media-section">
 		<div class="container">
 			<h2 class="section-title">
 				<span class="top-text">In the media</span>
 				<span class="bottom-text">What they are saying</span>
 			</h2>
 			<div class="row media-texts">
-				<div class="col col-md-4 text-center">
-					“This recent development will mark another milestone achievement for blockchain industry
+				<div class="col col-lg-4 col-md-6 text-center">
+					<p>“This recent development will mark another milestone achievement for blockchain industry
 					as a whole
-					in terms of achieving mainstream recognition and adoption.”
+					in terms of achieving mainstream recognition and adoption.”</p>
+					<div class="img-wrap">	<img src="images/logo-ccn.png" alt="ccn" height="55"></div>
 				</div>
-				<div class="col col-md-4 text-center">
-					“Users can pay for a restaurant meal with their card, and the bank will automatically
+				<div class="col col-lg-4 col-md-6 text-center">
+					<p>“Users can pay for a restaurant meal with their card, and the bank will automatically
 					convert their
-					bitcoin into currency.”
+					bitcoin into currency.”</p>
+					<div class="img-wrap">	<img src="images/logo-cnbc.png" alt="cnbc" height="65"></div>
 				</div>
-				<div class="col col-md-4 text-center">
-					“40.000 clients signed up for the new crypto banking service.”
+				<div class="col col-lg-4 col-md-6 text-center">
+					<p>“40.000 clients signed up for the new crypto banking service.”</p>
+					<div class="img-wrap">	<img src="images/logo-cointelegraph.png" alt="cointelegraph" height="80"></div>
 				</div>
-			</div>
-			<div class="row media-images align-items-center m-bottom">
-				<div class="col col-md-4 text-center">
-					<img src="images/logo-ccn.png" alt="ccn" height="55">
-				</div>
-				<div class="col col-md-4 text-center">
-					<img src="images/logo-cnbc.png" alt="cnbc" height="65">
-				</div>
-				<div class="col col-md-4 text-center">
-					<img src="images/logo-cointelegraph.png" alt="cointelegraph" height="80">
-				</div>
-			</div>
-			<div class="row media-texts">
-				<div class="col col-md-4 text-center">
-					“Anyone who wants to trade cryptocurrencies will soon find out that it’s rather
+				<div class="col col-lg-4 col-md-6 text-center">
+					<p>“Anyone who wants to trade cryptocurrencies will soon find out that it’s rather
 					complicated. [...]
-					Startup Bitwala wants to change that and make Bitcoin accessible for all.”
+					Startup Bitwala wants to change that and make Bitcoin accessible for all.”</p>
+					<div class="img-wrap">	<img src="images/logo-suddeutsche-zeitung.png" alt="suddeutsche-zeitung" height="45"></div>
 				</div>
-				<div class="col col-md-4 text-center">
-					“There's a Bright Future for Cryptocurrencies.”
-					Founder and President Jörg Von Minckwitz interviewed by Bloomberg
+				<div class="col col-lg-4 col-md-6 text-center">
+					<p>“There's a Bright Future for Cryptocurrencies.”
+					Founder and President Jörg Von Minckwitz interviewed by Bloomberg</p>
+					<div class="img-wrap">		<img src="images/logo-bloomberg.png" alt="bloomberg" height="45"></div>
 				</div>
-				<div class="col col-md-4 text-center">
-					“The Bitwala account comes with a bitcoin wallet. Users can manage both their BTC and euro
-					deposits
-					in one place”
-				</div>
-			</div>
-			<div class="row media-images align-items-center">
-				<div class="col col-md-4 text-center">
-					<img src="images/logo-suddeutsche-zeitung.png" alt="suddeutsche-zeitung" height="45">
-				</div>
-				<div class="col col-md-4 text-center">
-					<img src="images/logo-bloomberg.png" alt="bloomberg" height="45">
-				</div>
-				<div class="col col-md-4 text-center">
-					<img src="images/logo-bitcoin-com.png" alt="bitcoin" height="50">
+				<div class="col col-lg-4 col-md-6 text-center">
+					<p>	“The Bitwala account comes with a bitcoin wallet. Users can manage both their BTC and euro
+						deposits
+						in one place”</p>
+					<div class="img-wrap">					<img src="images/logo-bitcoin-com.png" alt="bitcoin" height="50"></div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="events-section">
+	<section class="section events-section">
 		<div class="container">
 			<h2 class="sub-section-title text-center">
 				Where to meet us
@@ -801,7 +780,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="faqSection" class="faq-section">
+	<section id="faqSection" class="section faq-section">
 		<div class="container">
 			<h2 class="sub-section-title text-center">FAQ
 			</h2>
@@ -930,7 +909,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="subscribe-section">
+	<section class="section subscribe-section">
 		<div class="container">
 			<h2 class="section-title">
 				<span class="top-text">Newsletter</span>
@@ -1288,8 +1267,7 @@
 				<div class="row">
 					<div class="col">
 						<p>Join our community!</p>
-						<a class="telegram-button modal-secondary-btn" href="#"><i
-									class="fab fa-telegram-plane"></i>1.254</a>
+						<a class="telegram-button modal-secondary-btn" href="#"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></i>1.254</a>
 					</div>
 					<div class="col">
 						<p>Get your free banking account!</p>
