--- a/src/index.html
+++ b/src/index.html
@@ -85,12 +85,15 @@
 				</h2>
 			</div>
 			<div class="section-descr">
-				<img class="section-img" src="images/graphic-market-growth.png" alt="">
+				<img class="section-img" src="images/graphic-market-growth.png" alt="market growth">
 				<div class="container abs-container">
 					<div class="quotation">
 						<p class="text">“Up to 10% of the global GDP (~$10 trillion) will be tokenised and
 							available for trading on a blockchain by 2025” </p>
 						<p class="sign">– WEF 2018</p>
+					</div>
+					<div class="section-img-mobile">
+						<img src="images/graphic-market-growth-mobile.png" alt="market growth">
 					</div>
 				</div>
 			</div>
@@ -129,7 +132,7 @@
 			</h2>
 			<div class="roadmap-items-wrap">
 				<div class="row">
-					<div class="col col-md-6">
+					<div class="col col-12 col-md-6">
 						<div class="roadmap-item">
 							<img src="images/icon-trading.png" alt="trading">
 							<h4 class="item-title">Trade any asset</h4>
@@ -139,7 +142,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col col-md-6">
+					<div class="col col-12 col-md-6">
 						<div class="roadmap-item">
 							<img src="images/icon-banking.png" alt="banking">
 							<h4 class="item-title">Banking without limit</h4>
@@ -149,7 +152,7 @@
 						</div>
 					</div>
 					<div class="w-100"></div>
-					<div class="col col-md-6">
+					<div class="col col-12 col-md-6">
 						<div class="roadmap-item">
 							<img src="images/icon-development.png" alt="development">
 							<h4 class="item-title">More choices, less hassle</h4>
@@ -158,7 +161,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col col-md-6">
+					<div class="col col-12 col-md-6">
 						<div class="roadmap-item">
 							<img src="images/icon-globe.png" alt="globe">
 							<h4 class="item-title">Anyone, anywhere</h4>
