documents form templating

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,80 @@
 				src='https://www.google.com/recaptcha/api.js?render=6LcO0ocUAAAAABj11_siC5P2rZSsxviho9yi0XMh'></script>
 </head>
 <body>
+<!--register modal-->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#registerModal">
+	Register modal
+</button>
+<div class="modal fade theme-modal register-modal" id="registerModal" tabindex="-1"
+		 role="dialog" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			</button>
+			<div class="inner-wrap">
+				<a href="#" class="logo"><img src="images/logo.png" alt="logo"></a>
+				<h3 class="modal-title">Have you already registered to get
+					whitelisted?</h3>
+				<div class="btn-wrap">
+					<p class="m-bottom"><a href="#" class="primary-theme-btn btn">Not yet, I’d like to
+						register</a></p>
+					<p><a href="#" class="secondary-theme-btn btn">Yes, of course</a></p>
+				</div>
+				<a href="#" class="modal-link">I’ll register later, please take me to the document
+					&gt;</a>
+			</div>
+		</div>
+	</div>
+</div>
+<!--register modal end-->
+
+<!--download modal-->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#downloadModal">
+	Download modal
+</button>
+<div class="modal fade theme-modal download-modal" id="downloadModal" tabindex="-1"
+		 role="dialog" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			</button>
+			<div class="inner-wrap">
+				<a href="#" class="logo"><img src="images/logo.png" alt="logo"></a>
+				<h3 class="modal-title">Your document is ready</h3>
+				<div class="btn-wrap">
+				<a href="#" class="primary-theme-btn btn">Download Whitepaper</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!--download modal end-->
+
+<!--check modal-->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#checkModal">
+	Check modal
+</button>
+<div class="modal fade theme-modal check-modal" id="checkModal" tabindex="-1"
+		 role="dialog" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			</button>
+			<div class="inner-wrap">
+				<a href="#" class="logo"><img src="images/logo.png" alt="logo"></a>
+				<h3 class="modal-title">Please check your email, we will contact you shortly with more information.</h3>
+				<h3 class="modal-title">Your document is ready</h3>
+				<div class="btn-wrap">
+					<a href="#" class="primary-theme-btn btn">Download Whitepaper</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!--download modal end-->
 <header id="mainHeader" class="header">
 	<div class="container">
 		<div class="inner-wrap">
