--- a/src/index.html
+++ b/src/index.html
@@ -65,14 +65,16 @@
 			<div class="section-descr">
 				<img class="section-img" src="images/mobile-screens.png" alt="">
 				<div class="container abs-container">
-					<h3 class="descr-title">Safe, fast, <br> transparent and live!</h3>
-					<div class="counter">
-						<div class="count">40,000</div>
-						<div class="descr">Early adopters and counting</div>
-					</div>
-					<div class="registration">
-						<h4 class="registration-title">Create your own Bitwala account today</h4>
-						<a href="#" class="arr-link registration-link">Sign up now &gt;</a>
+					<div class="inner-wrap">
+						<h3 class="descr-title">Safe, fast, <br> transparent and live!</h3>
+						<div class="counter">
+							<div class="count">40,000</div>
+							<div class="descr">Early adopters and counting</div>
+						</div>
+						<div class="registration">
+							<h4 class="registration-title">Create your own Bitwala account today</h4>
+							<a href="#" class="arr-link registration-link">Sign up now &gt;</a>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -386,14 +388,14 @@
 						<div class="carousel-inner">
 							<div class="carousel-item active">
 								<div class="row no-gutters">
-									<div class="col-5">
+									<div class="col-12 col-md-5">
 										<div class="inner-img">
 											<img class="bg-img" src="images/slider-img-1.png" alt="image">
 											<img class="review-logo" src="images/logo-bitcoin-foundation-white.png"
 													 alt="logo">
 										</div>
 									</div>
-									<div class="col-7">
+									<div class="col-12 col-md-7">
 										<div class="review">
 											<div class="review-text">
 												<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -409,12 +411,12 @@
 							</div>
 							<div class="carousel-item">
 								<div class="row no-gutters">
-									<div class="col-5">
+									<div class="col-12 col-md-5">
 										<div class="inner-img">
 											<img class="bg-img" src="images/slider-img-1.png" alt="image">
 										</div>
 									</div>
-									<div class="col-7">
+									<div class="col-12 col-md-7">
 										<div class="review">
 											<div class="review-text">
 												<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -430,12 +432,12 @@
 							</div>
 							<div class="carousel-item">
 								<div class="row no-gutters">
-									<div class="col-5">
+									<div class="col-12 col-md-5">
 										<div class="inner-img">
-											<img class="bg-img"  src="images/slider-img-1.png" alt="image">
+											<img class="bg-img" src="images/slider-img-1.png" alt="image">
 										</div>
 									</div>
-									<div class="col-7">
+									<div class="col-12 col-md-7">
 										<div class="review">
 											<div class="review-text">
 												<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -451,12 +453,12 @@
 							</div>
 							<div class="carousel-item">
 								<div class="row no-gutters">
-									<div class="col-5">
+									<div class="col-12 col-md-5">
 										<div class="inner-img">
-											<img class="bg-img"  src="images/slider-img-1.png" alt="image">
+											<img class="bg-img" src="images/slider-img-1.png" alt="image">
 										</div>
 									</div>
-									<div class="col-7">
+									<div class="col-12 col-md-7">
 										<div class="review">
 											<div class="review-text">
 												<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -472,12 +474,12 @@
 							</div>
 							<div class="carousel-item">
 								<div class="row no-gutters">
-									<div class="col-5">
+									<div class="col-12 col-md-5">
 										<div class="inner-img">
-											<img class="bg-img"  src="images/slider-img-1.png" alt="image">
+											<img class="bg-img" src="images/slider-img-1.png" alt="image">
 										</div>
 									</div>
-									<div class="col-7">
+									<div class="col-12 col-md-7">
 										<div class="review">
 											<div class="review-text">
 												<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -644,26 +646,26 @@
 		<div class="partners">
 			<div class="container">
 				<div class="row no-gutters">
-					<div class="col-md-4 partner-item b-bottom b-right">
+					<div class="col-md-4 col-6 partner-item b-bottom b-right">
 						<a href="#" class="partner-link"><img src="images/logo-alst-grey.png" alt="alst"
 																									width="245"></a>
 					</div>
-					<div class="col-md-4 partner-item b-bottom b-right crop-corners">
+					<div class="col-md-4 col-6 partner-item b-bottom b-right crop-corners">
 						<a href="#" class="partner-link"><img src="images/logo-dcg-grey.png" alt="dcg"
 																									width="130"></a>
 					</div>
-					<div class="col-md-4 partner-item b-bottom">
+					<div class="col-md-4 col-6 partner-item b-bottom">
 						<a href="#" class="partner-link"><img src="images/logo-coparion-grey.png"
 																									alt="coparion" width="190"></a>
 					</div>
-					<div class="col-md-4 partner-item b-right">
+					<div class="col-md-4 col-6 partner-item b-right">
 						<a href="#" class="partner-link"><img src="images/logo-earlybird-grey.png"
 																									alt="earlybird" width="200"></a>
 					</div>
-					<div class="col-md-4 partner-item b-right">
+					<div class="col-md-4 col-6 partner-item b-right">
 						<a href="#" class="partner-link"><img src="images/logo-htgf-grey.png" alt="htgf"></a>
 					</div>
-					<div class="col-md-4 partner-item">
+					<div class="col-md-4 col-6 partner-item">
 						<a href="#" class="partner-link"><img src="images/logo-solaris-bank-grey.png"
 																									alt="solaris" width="225px"></a>
 					</div>
@@ -678,38 +680,44 @@
 				<span class="bottom-text">What they are saying</span>
 			</h2>
 			<div class="row media-texts">
-				<div class="col col-lg-4 col-md-6 text-center">
-					<p>“This recent development will mark another milestone achievement for blockchain industry
-					as a whole
-					in terms of achieving mainstream recognition and adoption.”</p>
-					<div class="img-wrap">	<img src="images/logo-ccn.png" alt="ccn" height="55"></div>
+				<div class="col col-12 col-lg-4 col-md-6 text-center">
+					<p>“This recent development will mark another milestone achievement for blockchain
+						industry
+						as a whole
+						in terms of achieving mainstream recognition and adoption.”</p>
+					<div class="img-wrap"><img src="images/logo-ccn.png" alt="ccn" height="55"></div>
 				</div>
-				<div class="col col-lg-4 col-md-6 text-center">
+				<div class="col col-12 col-lg-4 col-md-6 text-center">
 					<p>“Users can pay for a restaurant meal with their card, and the bank will automatically
-					convert their
-					bitcoin into currency.”</p>
-					<div class="img-wrap">	<img src="images/logo-cnbc.png" alt="cnbc" height="65"></div>
+						convert their
+						bitcoin into currency.”</p>
+					<div class="img-wrap"><img src="images/logo-cnbc.png" alt="cnbc" height="65"></div>
 				</div>
-				<div class="col col-lg-4 col-md-6 text-center">
+				<div class="col col-12 col-lg-4 col-md-6 text-center">
 					<p>“40.000 clients signed up for the new crypto banking service.”</p>
-					<div class="img-wrap">	<img src="images/logo-cointelegraph.png" alt="cointelegraph" height="80"></div>
+					<div class="img-wrap"><img src="images/logo-cointelegraph.png" alt="cointelegraph"
+																		 height="80"></div>
 				</div>
-				<div class="col col-lg-4 col-md-6 text-center">
+				<div class="col col-12 col-lg-4 col-md-6 text-center">
 					<p>“Anyone who wants to trade cryptocurrencies will soon find out that it’s rather
-					complicated. [...]
-					Startup Bitwala wants to change that and make Bitcoin accessible for all.”</p>
-					<div class="img-wrap">	<img src="images/logo-suddeutsche-zeitung.png" alt="suddeutsche-zeitung" height="45"></div>
+						complicated. [...]
+						Startup Bitwala wants to change that and make Bitcoin accessible for all.”</p>
+					<div class="img-wrap"><img src="images/logo-suddeutsche-zeitung.png"
+																		 alt="suddeutsche-zeitung" height="45"></div>
 				</div>
-				<div class="col col-lg-4 col-md-6 text-center">
+				<div class="col col-12 col-lg-4 col-md-6 text-center">
 					<p>“There's a Bright Future for Cryptocurrencies.”
-					Founder and President Jörg Von Minckwitz interviewed by Bloomberg</p>
-					<div class="img-wrap">		<img src="images/logo-bloomberg.png" alt="bloomberg" height="45"></div>
+						Founder and President Jörg Von Minckwitz interviewed by Bloomberg</p>
+					<div class="img-wrap"><img src="images/logo-bloomberg.png" alt="bloomberg" height="45">
+					</div>
 				</div>
-				<div class="col col-lg-4 col-md-6 text-center">
-					<p>	“The Bitwala account comes with a bitcoin wallet. Users can manage both their BTC and euro
+				<div class="col col-12 col-lg-4 col-md-6 text-center">
+					<p> “The Bitwala account comes with a bitcoin wallet. Users can manage both their BTC and
+						euro
 						deposits
 						in one place”</p>
-					<div class="img-wrap">					<img src="images/logo-bitcoin-com.png" alt="bitcoin" height="50"></div>
+					<div class="img-wrap"><img src="images/logo-bitcoin-com.png" alt="bitcoin" height="50">
+					</div>
 				</div>
 			</div>
 		</div>
@@ -931,29 +939,29 @@
 	<div class="container">
 		<div class="footer-body">
 			<div class="row">
-				<div class="col col-8 footer-links">
+				<div class="col col-12 col-8 footer-links">
 					<div class="row">
-						<div class="col">
+						<div class="col-6 col-sm-3">
 							<h6 class="foot-title">Bitwala Token</h6>
 							<ul class="foot-links">
 								<li><a href="#" class="foot-link">Privacy Policy</a></li>
 								<li><a href="#" class="foot-link">Imprint</a></li>
 							</ul>
 						</div>
-						<div class="col">
+						<div class="col-6 col-sm-3">
 							<h6 class="foot-title">Platform</h6>
 							<ul class="foot-links">
 								<li><a href="#" class="foot-link">Home page</a></li>
 							</ul>
 						</div>
-						<div class="col">
+						<div class="col-6 col-sm-3">
 							<h6 class="foot-title">Help</h6>
 							<ul class="foot-links">
 								<li><a href="#" class="foot-link">Contact Us</a></li>
 								<li><a href="#" class="foot-link">Blog</a></li>
 							</ul>
 						</div>
-						<div class="col">
+						<div class="col-6 col-sm-3">
 							<h6 class="foot-title">Social</h6>
 							<ul class="foot-links">
 								<li><a href="#" class="foot-link">Twitter</a></li>
@@ -965,7 +973,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col footer-logo">
+				<div class="col col-12 footer-logo">
 					<a href="#" class="logo"><img src="images/logo.png" alt="png"></a>
 				</div>
 			</div>
@@ -1270,7 +1278,9 @@
 				<div class="row">
 					<div class="col">
 						<p>Join our community!</p>
-						<a class="telegram-button modal-secondary-btn" href="#"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></i>1.254</a>
+						<a class="telegram-button modal-secondary-btn" href="#"><i class="fa fa-paper-plane-o"
+																																			 aria-hidden="true"></i></i>
+							1.254</a>
 					</div>
 					<div class="col">
 						<p>Get your free banking account!</p>
