--- a/src/index.html
+++ b/src/index.html
@@ -33,11 +33,11 @@
 				<h3 class="modal-title">Have you already registered to get
 					whitelisted?</h3>
 				<div class="btn-wrap">
-					<p class="m-bottom"><a href="#" class="primary-theme-btn btn">Not yet, I’d like to
+					<p class="m-bottom"><a href="#" class="primary-theme-btn btn show-register-form">Not yet, I’d like to
 						register</a></p>
-					<p><a href="#" class="secondary-theme-btn btn">Yes, of course</a></p>
+					<p><a href="#" class="secondary-theme-btn btn show-download-modal">Yes, of course</a></p>
 				</div>
-				<a href="#" class="modal-link">I’ll register later, please take me to the document
+				<a href="#" class="modal-link show-download-modal show-download-modal">I’ll register later, please take me to the document
 					&gt;</a>
 			</div>
 		</div>
@@ -60,7 +60,7 @@
 				<a href="#" class="logo"><img src="images/logo.png" alt="logo"></a>
 				<h3 class="modal-title">Your document is ready</h3>
 				<div class="btn-wrap">
-				<a href="#" class="primary-theme-btn btn">Download Whitepaper</a>
+				<a href="#" class="primary-theme-btn btn show-thanks-modal">Download Whitepaper</a>
 				</div>
 			</div>
 		</div>
@@ -84,7 +84,7 @@
 				<h3 class="modal-title">Please check your email, we will contact you shortly with more information.</h3>
 				<h3 class="modal-title">Your document is ready</h3>
 				<div class="btn-wrap">
-					<a href="#" class="primary-theme-btn btn">Download Whitepaper</a>
+					<a href="#" class="primary-theme-btn btn show-thanks-modal">Download Whitepaper</a>
 				</div>
 			</div>
 		</div>
@@ -105,7 +105,7 @@
 					<li><a href="#faqSection" class="main-nav-link">FAQ</a></li>
 					<li><a href="#footer" class="main-nav-link">Social</a></li>
 				</ul>
-				<a href="#" class="btn primary-theme-btn" data-toggle="modal" data-target="#whitelistModal">Get
+				<a href="#" class="btn primary-theme-btn show-whitelist-modal" data-toggle="modal" data-target="#whitelistModal">Get
 					whitelisted</a>
 			</div>
 		</div>
@@ -186,7 +186,7 @@
 					</div>
 					<div class="sub-block-text text-right">worth of tokens</div>
 					<p class="text-right">
-						<a href="#" class="arr-link">Get whitelisted &gt;</a>
+						<a href="#" class="arr-link show-whitelist-modal" data-toggle="modal" data-target="#whitelistModal" >Get whitelisted &gt;</a>
 					</p>
 				</div>
 			</div>
@@ -302,7 +302,7 @@
 									<div class="doc-number">01</div>
 									<div class="doc-descr">
 										<h6 class="doc-title">One pager</h6>
-										<a href="#" class="arr-link">Download &gt;</a>
+										<a href="#" class="arr-link document-download" data-doc-name="ONE PAGER">Download &gt;</a>
 									</div>
 								</div>
 							</div>
