--- a/src/index.html
+++ b/src/index.html
@@ -181,12 +181,14 @@
 		<section class="sub-section graphic-section">
 			<div class="container">
 				<h2 class="section-title">
-					<span class="top-text">A unique opportunity</span>
+					<span class="top-text">Great opportunity</span>
 					<span class="bottom-text">BitwalaToken Offering</span>
 				</h2>
 				<div class="token-graphic">
-					<img class="token-graphic-image" src="images/graphic-bitwala-token.png"
+					<div class="token-graphic-image">
+					<img src="images/graphic-bitwala-token.png"
 							 alt="token graphic">
+					</div>
 					<div class="token-graphic-item left first">
 						<img class="token-graphic-icon" src="images/icon-key.png" alt="key">
 						<div class="separator"></div>
@@ -277,14 +279,14 @@
 			<div class="container">
 				<h2 class="sub-section-title">Token Sale Facts</h2>
 				<div class="row no-gutters ts-items">
-					<div class="col-sm-6 col-12">
+					<div class="col-sm-6 col-6">
 						<div class="ts-item">
 							<img class="ts-icon" src="images/icon-price-tag.png" alt="price" width="57">
 							<h5 class="ts-item-title">1 BWT = 1 EUR</h5>
 							<div class="ts-item-descr">Token nominal price</div>
 						</div>
 					</div>
-					<div class="col-sm-6 col-12">
+					<div class="col-sm-6 col-6">
 						<div class="ts-item">
 							<img class="ts-icon" src="images/icon-currency.png" alt="currency" width="88">
 							<h5 class="ts-item-title">EUR, BTC, ETH</h5>
@@ -292,14 +294,14 @@
 						</div>
 					</div>
 					<div class="w-100"></div>
-					<div class="col-sm-6 col-12">
+					<div class="col-sm-6 col-6">
 						<div class="ts-item">
-							<img class="ts-icon" src="images/icon-speed.png" alt="speed" width="97">
+							<img class="ts-icon fix-width" src="images/icon-speed.png" alt="speed" width="97">
 							<h5 class="ts-item-title">15m / 75m tokens</h5>
 							<div class="ts-item-descr">Soft-cap / Hard-cap</div>
 						</div>
 					</div>
-					<div class="col-sm-6 col-12">
+					<div class="col-sm-6 col-6">
 						<div class="ts-item">
 							<img class="ts-icon" src="images/icon-pie-chart.png" alt="pie chart" width="75">
 							<h5 class="ts-item-title">10%</h5>
