--- a/src/index.html
+++ b/src/index.html
@@ -19,17 +19,22 @@
 		<div class="inner-wrap">
 			<a href="#" class="logo"><img src="images/logo.png" alt="Logo"></a>
 			<div class="main-navigation">
-				<a href="#" class="bank-live-link"><span class="text">Bank live</span><span
-							class="icon"><img src="images/bank-live-icon.png" alt=""></span></a>
-				<ul class="main-nav">
-					<li><a href="#stoSection" class="main-nav-link">STO</a></li>
-					<li><a href="#roadmapSection" class="main-nav-link">Roadmap</a></li>
-					<li><a href="#teamSection" class="main-nav-link">Team</a></li>
-					<li><a href="#faqSection" class="main-nav-link">FAQ</a></li>
-					<li><a href="#footer" class="main-nav-link">Social</a></li>
-				</ul>
-				<a href="#" class="btn primary-theme-btn" data-toggle="modal" data-target="#whitelistModal">Get
-					whitelisted</a>
+				<div class="main-navigation-container">
+					<div class="inner-wrap">
+					<a href="#" class="bank-live-link"><span class="text">Bank live</span><span
+								class="icon"><img src="images/bank-live-icon.png" alt=""></span></a>
+					<ul class="main-nav">
+						<li><a href="#stoSection" class="main-nav-link">STO</a></li>
+						<li><a href="#roadmapSection" class="main-nav-link">Roadmap</a></li>
+						<li><a href="#teamSection" class="main-nav-link">Team</a></li>
+						<li><a href="#faqSection" class="main-nav-link">FAQ</a></li>
+						<li><a href="#footer" class="main-nav-link">Social</a></li>
+					</ul>
+					<a href="#" class="btn primary-theme-btn" data-toggle="modal"
+						 data-target="#whitelistModal">Get
+						whitelisted</a>
+					</div>
+				</div>
 			</div>
 			<a href="#" class="menu-toggle">
 				<i class="fa fa-bars" aria-hidden="true"></i>
@@ -186,8 +191,8 @@
 				</h2>
 				<div class="token-graphic">
 					<div class="token-graphic-image">
-					<img src="images/graphic-bitwala-token.png"
-							 alt="token graphic">
+						<img src="images/graphic-bitwala-token.png"
+								 alt="token graphic">
 					</div>
 					<div class="token-graphic-item left first">
 						<img class="token-graphic-icon" src="images/icon-key.png" alt="key">
