modal form responsive

--- a/src/index.html
+++ b/src/index.html
@@ -1349,14 +1349,15 @@
 					more information!</h3>
 				<div class="row">
 					<div class="col">
-						<p>Join our community!</p>
+						<p class="inner-title">Join our community!</p>
 						<a class="telegram-button modal-secondary-btn" href="#"><i class="fa fa-paper-plane-o"
 																																			 aria-hidden="true"></i></i>
 							1.254</a>
 					</div>
 					<div class="col">
-						<p>Get your free banking account!</p>
-						<a class="bitwala-button modal-secondary-btn" href="#">Bitwala</a>
+						<p class="inner-title">Get your free banking account!</p>
+						<a class="bitwala-button modal-secondary-btn" href="#"><img src="images/bitwala-logo-blue.png"
+																																													 alt="bitwala"></a>
 					</div>
 				</div>
 
